syntax = "proto3";

package order_service;
option go_package = "github.com/KonnorFrik/BinaryTentacles";

import "order_type.proto";

message CreateRequest {
    uint64 user_id = 1;
    uint64 market_id = 2;
    OrderType order_type = 3;
    double price = 4;
    uint64 quantity = 5;
}
