syntax = "proto3";

package order_service;
option go_package = "github.com/KonnorFrik/BinaryTentacles";

import "order_status.proto";

message CreateResponse {
    string order_id = 1;
    OrderStatus order_status = 2;
}
